<resources>
    <string name="app_name">jw notes 2</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="create_type">create type</string>
    <string name="create">create</string>
    <string name="back">back</string>
    <string name="delete_all_notes_str">delete all notes</string>
    <string name="choose_type_delete">choose type delete</string>
    <string name="delete_notes_from_simple_group_str">delete notes from writing group</string>
    <string name="delete_groups_str">delete groups</string>
    <string name="select_type_sort_str">select type sort</string>
    <string name="description_str">description</string>
    <string name="your_name_type_str">your name type</string>
    <string name="delete_str">delete</string>
    <string name="edit_str">edit</string>


    <array name="types_comparators">
        <item>on date</item>
        <item>on type</item>
        <item>on description</item>
    </array>

    <array name="default_types">
        <item>another</item>
        <item>preaching</item>
        <item>theocratic</item>
        <item>homes</item>
        <item>repeats</item>
        <item>bible study</item>
        <item>theocratic events</item>
    </array>
    <array name="default_types_def_lang">
        <item>another</item>
        <item>preaching</item>
        <item>theocratic</item>
        <item>homes</item>
        <item>repeats</item>
        <item>bible study</item>
        <item>theocratic events</item>
    </array>


</resources>
